# perfract

./: README.md  codger  codger.cabal  index.html  perfract  perfract.cabal
c/: Makefile  aug_m.c  mp_poly.c  mp_poly_render.c  mp_vec.c  perfract.c  png.c  png.h  poly.c  poly_clip.c  poly_render.c  rat_rot.c  vec.c
src/: Acc.hs  Affine2D.hs  Cube.hs  Main.hs  PolyClip.hs  Pt.hs  RatRot.hs  RecFig.hs  Tupelo.hs
src/Graphics/: Perfract.hs
src/Graphics/Perfract/: Affine2D.hs  Affine3D.hs  Boxes.hs  Canv.hs  ConvPoly.hs  PolyBox.hs  PolyClip.hs  Pt.hs  RatRot.hs  RecFig.hs  RecFig3.hs  Shape.hs  Tupelo.hs
