name:            codger
version:         0.1
license:         BSD3
license-file:    LICENSE
author:          dan corson <danl@alum.mit.edu>
synopsis:        <syn>
build-type:      Simple

executable:      codger
main-is:         Main.hs
hs-source-dirs:  src
ghc-options:     -O3 -funbox-strict-fields -auto-all -caf-all -rtsopts -prof
build-depends:
    base
  , containers
  , gloss
  , spool
  , storable-record
  , time
  , vector
