name:            codger
version:         0.1
license:         BSD3
license-file:    LICENSE
author:          dan corson <danl@alum.mit.edu>
synopsis:        <syn>
build-type:      Simple

executable:      codger
main-is:         Main.hs
hs-source-dirs:  src
ghc-options:     -O3 -funbox-strict-fields
build-depends:
    base
  , containers
  , criterion
  , gloss
  , spool
  , storable-record
  , time
  , vector
