name:            perfract
version:         0.1
license:         BSD3
license-file:    LICENSE
author:          dan corson <danl@alum.mit.edu>
synopsis:        perfectly-rasterized fractals
build-type:      Simple

executable:      perfract
main-is:         Main.hs
hs-source-dirs:  src
ghc-options:     -Wall -O3 -funbox-strict-fields
build-depends:
    base
  , containers
  , criterion
  , deepseq
  , gloss
  , spool
  , storable-record
  , time
  , vector
